--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,7 +26,11 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["portfolio", "developer", "business"],
+  "categories": [
+    "portfolio",
+    "developer",
+    "business"
+  ],
   "screenshots": [],
   "shortcuts": [
     {
@@ -34,15 +38,36 @@
       "short_name": "Projects",
       "description": "View my projects",
       "url": "/#projects",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
       "name": "Contact",
       "short_name": "Contact",
       "description": "Get in touch",
       "url": "/#contact",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "Budget Calculator",
+      "short_name": "Budget",
+      "description": "Personal Finance Command",
+      "url": "/budget",
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ]
 }
-
