--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
+    "gray-matter": "^4.0.3",
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
