--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "resend": "^6.7.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "unified": "^11.0.5"
   },
