--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "indexnow": "node scripts/submit-urls.js indexnow",
+    "ping:google": "node scripts/submit-urls.js google",
+    "ping:all": "node scripts/submit-urls.js"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
